--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,6 +1,6 @@
-sonar.projectKey=ugioni_unit-tests-jest
-sonar.organization=ugioni
-sonar.projectName=Jest Unit Test
+sonar.projectKey=lucasfm20_testeUnitario
+sonar.organization=lucasfm20
+sonar.projectName=testeUnitario
 sonar.projectVersion=1.0
 sonar.sources=./src
 sonar.tests=./test
